--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     package="com.example.chendw.myapplication">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -24,9 +27,9 @@
             android:theme="@style/Theme.AppCompat.Dialog" />
         <activity android:name=".uiwidget.MyViewActivity" />
         <activity android:name=".uiwidget.ListViewActivity" />
-        <activity android:name=".uiwidget.CustomListViewActivity"></activity>
+        <activity android:name=".uiwidget.CustomListViewActivity" />
         <activity android:name=".broadcast.NetWorkBroadcast" />
-
+        <activity android:name=".RunTimePermissionActivity"></activity>
     </application>
 
 </manifest>
